--- a/Window/M1950/M1950/App.config
+++ b/Window/M1950/M1950/App.config
@@ -2,6 +2,7 @@
 <configuration>
     <configSections>
         <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" >
+            <section name="M1950.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
             <section name="PGFP6_9012.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
         </sectionGroup>
     </configSections>
@@ -9,6 +10,80 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
     </startup>
     <userSettings>
+        <M1950.Properties.Settings>
+            <setting name="password" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="checksum" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="pathLogfile" serializeAs="String">
+                <value />
+            </setting>
+            <setting name="En_QRcode" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="En_Download" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="En_Checksum" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="En_Ers" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="En_Buzz" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S1" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S2" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S3" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S4" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S5" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S6" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S7" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S8" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S9" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S10" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S11" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S12" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S13" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S14" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S15" serializeAs="String">
+                <value>False</value>
+            </setting>
+            <setting name="S16" serializeAs="String">
+                <value>False</value>
+            </setting>
+        </M1950.Properties.Settings>
         <PGFP6_9012.Properties.Settings>
             <setting name="password" serializeAs="String">
                 <value />
